Work on tinyfiledialogs. Done are open and save dialogs as well as message boxes.

--- a/configure.ac
+++ b/configure.ac
@@ -375,6 +375,7 @@ if test x$host = xi386-pc-os2-emx ; then
     CXXFLAGS="$CXXFLAGS -DOS2 -march=pentium4 -idirafter /@unixroot/usr/include/os2tk45"
     CFLAGS="$CFLAGS -DOS2 -march=pentium4 -idirafter /@unixroot/usr/include/os2tk45"
     LDFLAGS="$LDFLAGS -Zomf -Zhigh-mem -lcx"
+    AM_CONDITIONAL(OS2, true)
 fi
 
 dnl I would like to know of any concerns given by the C++ compiler.
