Prepare for release

--- a/dosbox-x.reference.conf
+++ b/dosbox-x.reference.conf
@@ -1,4 +1,4 @@
-# This is the configuration file for DOSBox-X 2025.02.01. (Please use the latest version of DOSBox-X)
+# This is the configuration file for DOSBox-X 2025.05.03. (Please use the latest version of DOSBox-X)
 # Lines starting with a # are comment lines and are ignored by DOSBox-X.
 # They are used to (briefly) document the effect of each option.
 # To write out ALL options, use command 'config -all' with -wc or -writeconf options.
@@ -14,7 +14,7 @@
 #    windowposition: Set the window position at startup in the positionX,positionY format (e.g.: 1300,200).
 #                      The window will be centered with "," (or empty), and will be in the original position with "-".
 #           display: Specify a screen/display number to use for a multi-screen setup (0 = default).
-#            output: What video system to use for output (openglnb = OpenGL nearest; openglpp = OpenGL perfect; ttf = TrueType font output).
+#            output: What video system to use for output (surface = software (SDL_Surface); openglnb = OpenGL nearest; openglpp = OpenGL perfect; ttf = TrueType font output).
 #                      Possible values: default, surface, overlay, ttf, opengl, openglnb, openglhq, openglpp, ddraw, direct3d.
 #       videodriver: Forces a video driver (e.g. windib/windows, directx, x11, fbcon, dummy, etc) for the SDL library to use.
 #      transparency: Set the transparency of the DOSBox-X screen (both windowed and full-screen modes, on SDL2 and Windows SDL1 builds).
@@ -308,7 +308,7 @@ convertdrivefat           = true
 #                   Possible values: green, amber, gray, white.
 #
 # Advanced options (see full configuration reference file [dosbox-x.reference.full.conf] for more details):
-# -> xbrz slice; xbrz fixed scale factor; xbrz max scale factor
+# -> modeswitch; xbrz slice; xbrz fixed scale factor; xbrz max scale factor
 #
 frameskip      = 0
 aspect         = false
@@ -468,7 +468,7 @@ vsyncrate = 75
 #               core: CPU Core used in emulation. auto will switch to dynamic if available and appropriate.
 #                       For the dynamic core, both dynamic_x86 and dynamic_rec are supported (dynamic_x86 is preferred).
 #                       Windows 95 or other preemptive multitasking OSes will not work with the dynamic_rec core.
-#                       Possible values: auto, dynamic, dynamic_x86, dynamic_nodhfpu, dynamic, dynamic_rec, normal, full, simple.
+#                       Possible values: auto, dynamic, dynamic_x86, dynamic_nodhfpu, dynamic_rec, normal, full, simple.
 #                fpu: Enable FPU emulation
 #                       Possible values: true, false, 1, 0, auto, 8087, 287, 387.
 #         rdtsc rate: If nonzero, the Pentium RDTSC counter will tick at this rate per millisecond instead of by the cycle count
@@ -687,7 +687,7 @@ fluid.soundfont =
 
 [sblaster]
 #                       sbtype: Type of Sound Blaster to emulate. 'gb' is Game Blaster.
-#                                 Possible values: sb1, sb2, sbpro1, sbpro2, sb16, sb16vibra, gb, ess688, ess1688, reveal_sc400, none.
+#                                 Possible values: sb1, sb1.0, sb1.5, sb2, sb2.0, sb2.01, sbpro1, sbpro2, sb16, sb16vibra, gb, ess688, ess1688, reveal_sc400, none.
 #                       sbbase: The IO address of the Sound Blaster.
 #                                 220h to 2E0h are for use with IBM PC Sound Blaster emulation.
 #                                 D2h to DEh are for use with NEC PC-98 Sound Blaster 16 emulation.
