--- a/contrib/windows/installer/dosbox-x.reference.setup.conf
+++ b/contrib/windows/installer/dosbox-x.reference.setup.conf
@@ -1,4 +1,4 @@
-# This is the configuration file for DOSBox-X 2025.02.01. (Please use the latest version of DOSBox-X)
+# This is the configuration file for DOSBox-X 2025.05.03. (Please use the latest version of DOSBox-X)
 # Lines starting with a # are comment lines and are ignored by DOSBox-X.
 # They are used to (briefly) document the effect of each option.
 # To write out ALL options, use command 'config -all' with -wc or -writeconf options.
@@ -14,7 +14,7 @@
 #    windowposition: Set the window position at startup in the positionX,positionY format (e.g.: 1300,200).
 #                      The window will be centered with "," (or empty), and will be in the original position with "-".
 #           display: Specify a screen/display number to use for a multi-screen setup (0 = default).
-#            output: What video system to use for output (openglnb = OpenGL nearest; openglpp = OpenGL perfect; ttf = TrueType font output).
+#            output: What video system to use for output (surface = software (SDL_Surface); openglnb = OpenGL nearest; openglpp = OpenGL perfect; ttf = TrueType font output).
 #                      Possible values: default, surface, overlay, ttf, opengl, openglnb, openglhq, openglpp, ddraw, direct3d.
 #       videodriver: Forces a video driver (e.g. windib/windows, directx, x11, fbcon, dummy, etc) for the SDL library to use.
 #      transparency: Set the transparency of the DOSBox-X screen (both windowed and full-screen modes, on SDL2 and Windows SDL1 builds).
@@ -415,7 +415,7 @@ debuggerrun = debugger
 #DOSBOX-X-ADV:#                                                           starting with cputype=8086 will use a memalias of 20 even if you later change cputype to 386.
 #DOSBOX-X-ADV:#                                                        24: 16MB aliasing. Common on 386SX systems (CPU had 24 external address bits)
 #DOSBOX-X-ADV:#                                                            or 386DX and 486 systems where the CPU communicated directly with the ISA bus (A24-A31 tied off)
-#DOSBOX-X-ADV:#                                                        26: 64MB aliasing. Some 486s had only 26 external address bits, some motherboards tied off A26-A31
+#DOSBOX-X-ADV:#                                                        26: 64MB aliasing. Some 486 clones (and 386EX/CX) had only 26 external address bits, some motherboards tied off A26-A31
 #DOSBOX-X-ADV:#                                                        32: 4GB aliasing. This is normal for most 486/Pentium and later systems and is the default for most values of cputype.
 #DOSBOX-X-ADV:#                                                        36: 64GB aliasing. Recommended if you are emulating more than 3.5GB of RAM and Pentium Pro/II Page Size Extensions.
 #DOSBOX-X-ADV:#                                                        40: 1TB aliasing. Recommended if you are emulating more than 63GB of RAM and Pentium Pro/II Page Size Extensions.
@@ -600,6 +600,7 @@ convertdrivefat                                 = true
 #                            Setting this option may prevent some scalers to work as expected.
 #                            Try turning this option off in such case.
 #                            For pixel-perfect scaling (output=openglpp), it is recommended to turn this option off.
+#DOSBOX-X-ADV:#              modeswitch: Let DOSBox-X determine the resolution of the monitor. This feature is only available when DOSBox-X is compiled with SDL2 support.
 #                  scaler: Scaler used to enlarge/enhance low resolution modes. Add keyword 'forced', after the name of the scaler to always use the scaler even if the result might not be desired.(e.g. 'normal2x forced')
 #                            Appending 'prompt' will cause a confirmation message for forcing the scaler.
 #                            To fit a scaler in the resolution used at full screen may require a border or side bars.
@@ -621,7 +622,7 @@ convertdrivefat                                 = true
 #                            Possible values: green, amber, gray, white.
 #DOSBOX-X-ADV-SEE:#
 #DOSBOX-X-ADV-SEE:# Advanced options (see full configuration reference file [dosbox-x.reference.full.conf] for more details):
-#DOSBOX-X-ADV-SEE:# -> xbrz slice; xbrz fixed scale factor; xbrz max scale factor
+#DOSBOX-X-ADV-SEE:# -> modeswitch; xbrz slice; xbrz fixed scale factor; xbrz max scale factor
 #DOSBOX-X-ADV-SEE:#
 frameskip               = 0
 aspect                  = false
@@ -629,6 +630,7 @@ aspect_ratio            = 0:0
 char9                   = true
 euro                    = -1
 doublescan              = true
+#DOSBOX-X-ADV:modeswitch              = false
 scaler                  = normal2x
 glshader                = none
 pixelshader             = none
@@ -1127,7 +1129,7 @@ vsyncrate = 75
 #                                            core: CPU Core used in emulation. auto will switch to dynamic if available and appropriate.
 #                                                    For the dynamic core, both dynamic_x86 and dynamic_rec are supported (dynamic_x86 is preferred).
 #                                                    Windows 95 or other preemptive multitasking OSes will not work with the dynamic_rec core.
-#                                                    Possible values: auto, dynamic, dynamic_x86, dynamic_nodhfpu, dynamic, dynamic_rec, normal, full, simple.
+#                                                    Possible values: auto, dynamic, dynamic_x86, dynamic_nodhfpu, dynamic_rec, normal, full, simple.
 #                                             fpu: Enable FPU emulation
 #                                                    Possible values: true, false, 1, 0, auto, 8087, 287, 387.
 #DOSBOX-X-ADV:#                                    cpuid string: If set, changes the string returned by the CPUID instruction. Normally by default the string is 'GenuineIntel'.
@@ -1610,7 +1612,7 @@ fluid.soundfont         =
 
 [sblaster]
 #                                           sbtype: Type of Sound Blaster to emulate. 'gb' is Game Blaster.
-#                                                     Possible values: sb1, sb2, sbpro1, sbpro2, sb16, sb16vibra, gb, ess688, ess1688, reveal_sc400, none.
+#                                                     Possible values: sb1, sb1.0, sb1.5, sb2, sb2.0, sb2.01, sbpro1, sbpro2, sb16, sb16vibra, gb, ess688, ess1688, reveal_sc400, none.
 #                                           sbbase: The IO address of the Sound Blaster.
 #                                                     220h to 2E0h are for use with IBM PC Sound Blaster emulation.
 #                                                     D2h to DEh are for use with NEC PC-98 Sound Blaster 16 emulation.
