--- a/contrib/windows/installer/dosbox-x.reference.setup.conf
+++ b/contrib/windows/installer/dosbox-x.reference.setup.conf
@@ -1140,6 +1140,7 @@ vsyncrate = 75
 #DOSBOX-X-ADV:#                                                    Note that the processor info and feature bits form the topmost 32 bits of the PSN and cannot be changed.
 #                                      rdtsc rate: If nonzero, the Pentium RDTSC counter will tick at this rate per millisecond instead of by the cycle count
 #                                  segment limits: Enforce checks for segment limits on 80286 and higher CPU types.
+#                                  lds wraparound: For LDS/LES instructions, in 16-bit code, check for 64KB wraparound case.
 #DOSBOX-X-ADV:#                                    double fault: Emulate double fault exception
 #DOSBOX-X-ADV:#              clear trap flag on unhandled int 1: If set, the DOS kernel INT 01h handler will clear the trap flag when called.
 #DOSBOX-X-ADV:#                                                    Normally a DOS program using INT 01h and the trap flag (usually for debugging)
@@ -1246,6 +1247,7 @@ fpu                                             = true
 #DOSBOX-X-ADV:processor serial number                         = 
 rdtsc rate                                      = 0
 segment limits                                  = true
+lds wraparound                                  = true
 #DOSBOX-X-ADV:double fault                                    = true
 #DOSBOX-X-ADV:clear trap flag on unhandled int 1              = false
 #DOSBOX-X-ADV:reset on triple fault                           = true
