--- a/dosbox-x.reference.conf
+++ b/dosbox-x.reference.conf
@@ -473,6 +473,7 @@ vsyncrate = 75
 #                       Possible values: true, false, 1, 0, auto, 8087, 287, 387.
 #         rdtsc rate: If nonzero, the Pentium RDTSC counter will tick at this rate per millisecond instead of by the cycle count
 #     segment limits: Enforce checks for segment limits on 80286 and higher CPU types.
+#     lds wraparound: For LDS/LES instructions, in 16-bit code, check for 64KB wraparound case.
 #            cputype: CPU Type used in emulation. "auto" emulates a 486 which tolerates Pentium instructions.
 #                       "experimental" enables newer instructions not normally found in the CPU types emulated by DOSBox-X, such as FISTTP.
 #                       Possible values: auto, 8086, 8086_prefetch, 80186, 80186_prefetch, 286, 286_prefetch, 386, 386_prefetch, 486old, 486old_prefetch, 486, 486_prefetch, pentium, pentium_mmx, ppro_slow, pentium_ii, pentium_iii, experimental.
@@ -502,6 +503,7 @@ core               = auto
 fpu                = true
 rdtsc rate         = 0
 segment limits     = true
+lds wraparound     = true
 cputype            = auto
 cycles             = auto
 cycleup            = 10
