--- a/dosbox-x.reference.full.conf
+++ b/dosbox-x.reference.full.conf
@@ -1112,6 +1112,7 @@ vsyncrate = 75
 #                                                    Note that the processor info and feature bits form the topmost 32 bits of the PSN and cannot be changed.
 #                                      rdtsc rate: If nonzero, the Pentium RDTSC counter will tick at this rate per millisecond instead of by the cycle count
 #                                  segment limits: Enforce checks for segment limits on 80286 and higher CPU types.
+#                                  lds wraparound: For LDS/LES instructions, in 16-bit code, check for 64KB wraparound case.
 #                                    double fault: Emulate double fault exception
 #              clear trap flag on unhandled int 1: If set, the DOS kernel INT 01h handler will clear the trap flag when called.
 #                                                    Normally a DOS program using INT 01h and the trap flag (usually for debugging)
@@ -1214,6 +1215,7 @@ cpuid string                                    =
 processor serial number                         = 
 rdtsc rate                                      = 0
 segment limits                                  = true
+lds wraparound                                  = true
 double fault                                    = true
 clear trap flag on unhandled int 1              = false
 reset on triple fault                           = true
