--- a/dosbox-x.reference.conf
+++ b/dosbox-x.reference.conf
@@ -748,6 +748,67 @@ hardwarebase                 = 220
 goldplay                     = true
 blaster environment variable = true
 
+[sblaster2]
+#                       sbtype: Type of Sound Blaster to emulate. 'gb' is Game Blaster.
+#                                 Possible values: sb1, sb1.0, sb1.5, sb2, sb2.0, sb2.01, sbpro1, sbpro2, sb16, sb16vibra, gb, ess688, ess1688, reveal_sc400, none.
+#                       sbbase: The IO address of the Sound Blaster.
+#                                 220h to 2E0h are for use with IBM PC Sound Blaster emulation.
+#                                 D2h to DEh are for use with NEC PC-98 Sound Blaster 16 emulation.
+#                                 Possible values: 220, 240, 260, 280, 2a0, 2c0, 2e0, d2, d4, d6, d8, da, dc, de.
+#                          irq: The IRQ number of the Sound Blaster (usually 5 or 7, depending on the sound card type and the game).
+#                                 Set to 0 for the default setting of the sound card, or set to -1 to start DOSBox-X with the IRQ unassigned.
+#                                 Possible values: 7, 5, 3, 9, 10, 11, 12, 0, -1.
+#   listen to recording source: When the guest records audio from the Sound Blaster card, send the input source to the speakers as well so it can be heard.
+#             recording source: Audio source to use when guest is recording audio. At this time only generated audio sources are available.
+#                                 Possible values: silence, hiss, 1khz tone.
+#                          dma: The DMA number of the Sound Blaster. Set to -1 to start DOSBox-X with the DMA unassigned.
+#                                 Possible values: 1, 5, 0, 3, 6, 7, -1.
+#                         hdma: The High DMA number of the Sound Blaster. Set to -1 to start DOSBox-X with the High DMA unassigned.
+#                                 Possible values: 1, 5, 0, 3, 6, 7, -1.
+#               enable speaker: Start the DOS virtual machine with the Sound Blaster speaker enabled.
+#                                 Sound Blaster Pro and older cards have a speaker disable/enable command.
+#                                 Normally the card boots up with the speaker disabled. If a DOS game or demo
+#                                 attempts to play without enabling the speaker, set this option to true to
+#                                 compensate. This setting has no meaning if emulating a Sound Blaster 16 card.
+#                      sbmixer: Allow the Sound Blaster mixer to modify the DOSBox-X mixer.
+#                      oplmode: Type of OPL emulation. On 'auto' the mode is determined by the 'sbtype' setting.
+#                                 All OPL modes are AdLib-compatible.
+#                                 Possible values: auto, opl2, dualopl2, opl3, opl3gold, none, hardware, hardwaregb, esfm.
+#                       oplemu: Provider for the OPL emulation. 'compat' might provide better quality.
+#                                 'nuked' is the most accurate (but the most CPU-intensive). See oplrate as well.
+#                                 Possible values: default, compat, fast, nuked, mame, opl2board, opl3duoboard, retrowave_opl3, esfmu.
+#                      oplrate: Sample rate of OPL music emulation. Use 49716 for highest quality (set the mixer rate accordingly).
+#                                 Possible values: 49716, 48000, 44100, 32000, 22050, 16000, 11025, 8000.
+#                      oplport: Serial port of the OPL2 Audio Board when oplemu=opl2board, opl2mode will become 'opl2' automatically.
+#                retrowave_bus: Bus of the Retrowave series board (serial/spi). SPI is only supported on Linux.
+#               retrowave_port: Serial port of the Retrowave series board.
+#                 hardwarebase: base address of the real hardware Sound Blaster:
+#                                 210,220,230,240,250,260,280
+#                     goldplay: Enable goldplay emulation.
+# blaster environment variable: Whether or not to set the BLASTER environment variable automatically at startup
+#
+# Advanced options (see full configuration reference file [dosbox-x.reference.full.conf] for more details):
+# -> mindma; irq hack; dsp command aliases; pic unmask irq; enable asp; disable filtering; dsp write buffer status must return 0x7f or 0xff; pre-set sbpro stereo; cms; adlib force timer overflow on detect; retrowave_spi_cs; force dsp auto-init; force goldplay; goldplay stereo; dsp require interrupt acknowledge; dsp write busy delay; sample rate limits; instant direct dac; stereo control with sbpro only; dsp busy cycle rate; dsp busy cycle always; dsp busy cycle duty; io port aliasing
+#
+sbtype                       = none
+sbbase                       = 260
+irq                          = 3
+listen to recording source   = false
+recording source             = silence
+dma                          = 0
+hdma                         = 7
+enable speaker               = false
+sbmixer                      = true
+oplmode                      = none
+oplemu                       = default
+oplrate                      = 48000
+oplport                      = 
+retrowave_bus                = serial
+retrowave_port               = 
+hardwarebase                 = 220
+goldplay                     = true
+blaster environment variable = true
+
 [gus]
 #                        gus: Enable the Gravis Ultrasound emulation.
 # global register read alias: If true, all GUS global registers have a read alias at N and N+0x80.
