--- a/.github/workflows/vsbuild_xp.yml
+++ b/.github/workflows/vsbuild_xp.yml
@@ -152,6 +152,11 @@ jobs:
           msystem: MINGW32
           update: true
           install: git make mingw-w64-i686-libtool autoconf automake p7zip
+      - name: Export env parameters
+        run: |
+          echo "MSYS2_LOCATION=${{ steps.msys2.outputs.msys2-location }}" >> $GITHUB_ENV
+          echo "MSYSTEM_PREFIX=${{ steps.msys2.outputs.msys2-location }}/mingw32" >> $GITHUB_ENV
+          echo "mingw32 is installed at: $MSYSTEM_PREFIX"
       - name: Update build info
         shell: bash
         run: |
@@ -170,17 +175,13 @@ jobs:
         run: |
           top=`pwd`
           echo "${top}"
-          export "MSYSTEM_PREFIX=/d/a/_temp/msys64/mingw32"
           echo "path=$PATH"
           cd ${MSYSTEM_PREFIX}/..
-          rm -rf /d/a/_temp/msys64/mingw32
+          rm -rf mingw32
           mkdir mingw32
           7z x $top/build-scripts/mingw/lowend-bin/i686-7.3.0-release-posix-dwarf-rt_v5-rev0+nasm.7z -o${MSYSTEM_PREFIX}
-          # cp $top/build-scripts/mingw/lowend-bin/make.exe ${MSYSTEM_PREFIX}/bin/make.exe
           echo "MSYSTEM_PREFIX=${MSYSTEM_PREFIX}"
-          chmod +x ${MSYSTEM_PREFIX}/bin/*.*
-          chmod +x ${MSYSTEM_PREFIX}/i686-w64-mingw32/bin/*.*
-          chmod +x ${MSYSTEM_PREFIX}/opt/bin/*.*
+          find "${MSYSTEM_PREFIX}" -type f -iname "*.exe" -exec chmod +x {} \;
       - name: Build MinGW32 lowend SDL2
         run: |
           top=`pwd`
