Add permanent option for initial DOSBox-X shell

--- a/dosbox-x.reference.full.conf
+++ b/dosbox-x.reference.full.conf
@@ -279,6 +279,7 @@ debuggerrun = debugger
 #                          shell environment size: Size of the initial DOSBox-X shell environment block, in bytes. Setting to 0 implies a default size of 720 bytes as in DOSBox.
 #                                                    You can increase this size to store more environment variables in DOS, although this does not affect the environment block
 #                                                    of sub-processes spawned from the DOS shell. This option has no effect unless the dynamic kernel allocation is enabled.
+#                                 shell permanent: If enabled, initial DOSBox-X shell will stay permanent (equivalent to /P switch).
 #                               private area size: Set DOSBox-X private memory area size. This area contains private memory structures used by the DOS kernel.
 #                                                    It is discarded when you boot into another OS. Mainline DOSBox uses 32KB. Testing shows that it is possible
 #                                                    to run DOSBox with as little as 4KB. If DOSBox-X aborts with error "not enough memory for internal tables"
@@ -491,6 +492,7 @@ skip encoding unchanged frames                  = false
 capture chroma format                           = auto
 capture format                                  = default
 shell environment size                          = 0
+shell permanent                                 = false
 private area size                               = 32768
 a20                                             = mask
 turn off a20 gate on boot                       = true
