--- a/.github/workflows/windows-installers.yml
+++ b/.github/workflows/windows-installers.yml
@@ -284,7 +284,7 @@ jobs:
     permissions:
       actions: write  # for styfle/cancel-workflow-action to cancel/stop running workflows
       contents: write # for actions/checkout to fetch code and softprops/action-gh-release
-    runs-on: windows-latest
+    runs-on: windows-2022
     needs: [MinGW32_CI_build, MinGW64_CI_build, Visual_Studio_CI_build]
     env:
       GH_TOKEN: ${{ github.token }}
