--- a/dosbox-x.reference.full.conf
+++ b/dosbox-x.reference.full.conf
@@ -700,6 +700,9 @@ monochrome_pal          = green
 #  pc-98 show graphics layer on initialize: If PC-98 mode and INT 33h emulation is enabled, the graphics layer will be automatically enabled
 #                                             at driver startup AND when INT 33h AX=0 is called. This is NEC MOUSE.COM behavior and default
 #                                             enabled. To emulate other drivers like QMOUSE that do not follow this behavior, set to false.
+#       pc-98 chargen vsync-limited access: If set, reading pixels from the character generator while in Code Access mode (or always, for ANK
+#                                             characters) will be invalid. Some models (i.e. PC-9821As3) dont seem to have this limitation, but
+#                                             many others do.
 pc-98 BIOS copyright string              = false
 pc-98 int 1b fdc timer wait              = false
 pc-98 pic init to read isr               = true
@@ -732,6 +735,7 @@ pc-98 fontx sbcs                         =
 pc-98 fontx dbcs                         = 
 pc-98 fontx internal symbol              = false
 pc-98 show graphics layer on initialize  = true
+pc-98 chargen vsync-limited access       = true
 
 [dosv]
 #             dosv: Enable DOS/V emulation and specify which version to emulate. This option is intended for use with games or software
@@ -1891,7 +1895,7 @@ goldplay                                         = true
 goldplay stereo                                  = true
 dsp require interrupt acknowledge                = auto
 dsp write busy delay                             = -1
-blaster environment variable                     = true
+blaster environment variable                     = false
 sample rate limits                               = true
 instant direct dac                               = false
 stereo control with sbpro only                   = true
@@ -2327,6 +2331,7 @@ timeout     = 0
 #      turn off a20 gate on load if loadfix needed: If enabled, and loading a program below the 64kb boundary, turn off the A20 gate.
 #                                                     This can help with any program with startup code that assumes the segment wraparound of the 8086.
 #                                                     Depending on DOS configuration the A20 gate may be re-enabled later such as calling INT 21h.
+#                                  xms log memmove: If set, XMS move/copy operations are logged for debugging purposes.
 #                xms memmove causes flat real mode: If set, any call to XMS to move/copy memory sets up flat real mode for segment registers DS and ES.
 #                   xms init causes flat real mode: If set, when the DOS kernel initializes XMS it will switch on flat real mode for segment registers DS and ES if appropriate.
 #      resized free memory block becomes allocated: If set, and the DOS application resizes a freed memory block, that block will be marked as allocated to that program.
@@ -2388,6 +2393,7 @@ timeout     = 0
 #                               network redirector: Report DOS network redirector as resident. This will allow the host name to be returned unless the secure mode is enabled.
 #                                                     You can also directly access UNC network paths in the form \\MACHINE\SHARE even if they are not mounted as drives on Windows systems.
 #                                                     Set either "ipx=true" in [ipx] section or "ne2000=true" in [ne2000] section for a full network redirector environment.
+#   mcb corruption becomes application free memory: If MCB chain corruption occurs following the DOS program PSP segment and the DOS program does anything to cause memory allocation,make a new free memory block in it's place instead of halting emulation with an MCB chain error. Some DOS programs are sloppywith memory to corrupt the MCB chain after itself in memory. This is apparently real MS-DOS behavior, set to true to enable.If set to false, all MCB chain corruption will halt emulation as DOSBox forks typically do already.
 #              minimum dos initial private segment: In non-mainline mapping mode, where DOS structures are allocated from base memory, this sets the
 #                                                     minimum segment value. Recommended value is 0x70. You may reduce the value down to 0x50 if freeing
 #                                                     up more memory is important. Set to 0 for default.
@@ -2565,6 +2571,7 @@ timeout     = 0
 #                                     dos idle api: If set, DOSBox-X can lower the host system's CPU load when a supported guest program is idle.
 xms                                              = true
 turn off a20 gate on load if loadfix needed      = false
+xms log memmove                                  = false
 xms memmove causes flat real mode                = true
 xms init causes flat real mode                   = false
 resized free memory block becomes allocated      = true
@@ -2593,6 +2600,7 @@ cpm compatibility mode                           = auto
 share                                            = true
 file access tries                                = 0
 network redirector                               = true
+mcb corruption becomes application free memory   = false
 minimum dos initial private segment              = 0
 minimum mcb segment                              = 0
 minimum mcb free                                 = 0
