--- a/contrib/windows/installer/dosbox-x.reference.setup.conf
+++ b/contrib/windows/installer/dosbox-x.reference.setup.conf
@@ -287,6 +287,7 @@ debuggerrun = debugger
 #DOSBOX-X-ADV:#                          shell environment size: Size of the initial DOSBox-X shell environment block, in bytes. Setting to 0 implies a default size of 720 bytes as in DOSBox.
 #DOSBOX-X-ADV:#                                                    You can increase this size to store more environment variables in DOS, although this does not affect the environment block
 #DOSBOX-X-ADV:#                                                    of sub-processes spawned from the DOS shell. This option has no effect unless the dynamic kernel allocation is enabled.
+#DOSBOX-X-ADV:#                                 shell permanent: If enabled, initial DOSBox-X shell will stay permanent (equivalent to /P switch).
 #DOSBOX-X-ADV:#                               private area size: Set DOSBox-X private memory area size. This area contains private memory structures used by the DOS kernel.
 #DOSBOX-X-ADV:#                                                    It is discarded when you boot into another OS. Mainline DOSBox uses 32KB. Testing shows that it is possible
 #DOSBOX-X-ADV:#                                                    to run DOSBox with as little as 4KB. If DOSBox-X aborts with error "not enough memory for internal tables"
@@ -464,7 +465,7 @@ debuggerrun = debugger
 #DOSBOX-X-ADV:#                                  enable pci bus: Enable PCI bus emulation
 #DOSBOX-X-ADV-SEE:#
 #DOSBOX-X-ADV-SEE:# Advanced options (see full configuration reference file [dosbox-x.reference.full.conf] for more details):
-#DOSBOX-X-ADV-SEE:# -> disable graphical splash; allow quit after warning; keyboard hook; weitek; bochs debug port e9; video debug at startup; compresssaveparts; show recorded filename; skip encoding unchanged frames; capture chroma format; capture format; shell environment size; private area size; turn off a20 gate on boot; cbus bus clock; isa bus clock; pci bus clock; call binary on reset; unhandled irq handler; call binary on boot; ibm rom basic; rom bios allocation max; rom bios minimum size; irq delay ns; iodelay; iodelay16; iodelay32; acpi; acpi rsd ptr location; acpi sci irq; acpi iobase; acpi reserved size; memsizekb; dos mem limit; isa memory hole at 512kb; isa memory hole at 15mb; reboot delay; memalias; convert fat free space; convert fat timeout; leading colon write protect image; locking disk image mount; unmask keyboard on int 16 read; int16 keyboard polling undocumented cf behavior; allow port 92 reset; enable port 92; enable 1st dma controller; enable 2nd dma controller; allow dma address decrement; enable 128k capable 16-bit dma; enable dma extra page registers; dma page registers write-only; cascade interrupt never in service; cascade interrupt ignore in service; enable slave pic; enable pc nmi mask; allow more than 640kb base memory; enable pci bus
+#DOSBOX-X-ADV-SEE:# -> disable graphical splash; allow quit after warning; keyboard hook; weitek; bochs debug port e9; video debug at startup; compresssaveparts; show recorded filename; skip encoding unchanged frames; capture chroma format; capture format; shell environment size; shell permanent; private area size; turn off a20 gate on boot; cbus bus clock; isa bus clock; pci bus clock; call binary on reset; unhandled irq handler; call binary on boot; ibm rom basic; rom bios allocation max; rom bios minimum size; irq delay ns; iodelay; iodelay16; iodelay32; acpi; acpi rsd ptr location; acpi sci irq; acpi iobase; acpi reserved size; memsizekb; dos mem limit; isa memory hole at 512kb; isa memory hole at 15mb; reboot delay; memalias; convert fat free space; convert fat timeout; leading colon write protect image; locking disk image mount; unmask keyboard on int 16 read; int16 keyboard polling undocumented cf behavior; allow port 92 reset; enable port 92; enable 1st dma controller; enable 2nd dma controller; allow dma address decrement; enable 128k capable 16-bit dma; enable dma extra page registers; dma page registers write-only; cascade interrupt never in service; cascade interrupt ignore in service; enable slave pic; enable pc nmi mask; allow more than 640kb base memory; enable pci bus
 #DOSBOX-X-ADV-SEE:#
 language                                        = 
 title                                           = 
@@ -503,6 +504,7 @@ forceloadstate                                  = false
 #DOSBOX-X-ADV:capture chroma format                           = auto
 #DOSBOX-X-ADV:capture format                                  = default
 #DOSBOX-X-ADV:shell environment size                          = 0
+#DOSBOX-X-ADV:shell permanent                                 = false
 #DOSBOX-X-ADV:private area size                               = 32768
 a20                                             = mask
 #DOSBOX-X-ADV:turn off a20 gate on boot                       = true
@@ -714,9 +716,12 @@ monochrome_pal          = green
 #DOSBOX-X-ADV:#  pc-98 show graphics layer on initialize: If PC-98 mode and INT 33h emulation is enabled, the graphics layer will be automatically enabled
 #DOSBOX-X-ADV:#                                             at driver startup AND when INT 33h AX=0 is called. This is NEC MOUSE.COM behavior and default
 #DOSBOX-X-ADV:#                                             enabled. To emulate other drivers like QMOUSE that do not follow this behavior, set to false.
+#DOSBOX-X-ADV:#       pc-98 chargen vsync-limited access: If set, reading pixels from the character generator while in Code Access mode (or always, for ANK
+#DOSBOX-X-ADV:#                                             characters) will be invalid. Some models (i.e. PC-9821As3) dont seem to have this limitation, but
+#DOSBOX-X-ADV:#                                             many others do.
 #DOSBOX-X-ADV-SEE:#
 #DOSBOX-X-ADV-SEE:# Advanced options (see full configuration reference file [dosbox-x.reference.full.conf] for more details):
-#DOSBOX-X-ADV-SEE:# -> pc-98 int 1b fdc timer wait; pc-98 pic init to read isr; pc-98 fm board irq; pc-98 fm board io port; pc-98 time stamp; pc-98 sound bios; pc-98 load sound bios rom file; pc-98 buffer page flip; pc-98 enable 256-color planar; pc-98 enable 188 user cg; pc-98 start gdc at 5mhz; pc-98 allow scanline effect; pc-98 nec mouse function; pc-98 video mode; pc-98 timer always cycles; pc-98 timer master frequency; pc-98 allow 4 display partition graphics; pc-98 fontx sbcs; pc-98 fontx dbcs; pc-98 fontx internal symbol; pc-98 show graphics layer on initialize
+#DOSBOX-X-ADV-SEE:# -> pc-98 int 1b fdc timer wait; pc-98 pic init to read isr; pc-98 fm board irq; pc-98 fm board io port; pc-98 time stamp; pc-98 sound bios; pc-98 load sound bios rom file; pc-98 buffer page flip; pc-98 enable 256-color planar; pc-98 enable 188 user cg; pc-98 start gdc at 5mhz; pc-98 allow scanline effect; pc-98 nec mouse function; pc-98 video mode; pc-98 timer always cycles; pc-98 timer master frequency; pc-98 allow 4 display partition graphics; pc-98 fontx sbcs; pc-98 fontx dbcs; pc-98 fontx internal symbol; pc-98 show graphics layer on initialize; pc-98 chargen vsync-limited access
 #DOSBOX-X-ADV-SEE:#
 pc-98 BIOS copyright string              = false
 #DOSBOX-X-ADV:pc-98 int 1b fdc timer wait              = false
@@ -750,6 +755,7 @@ pc-98 anex86 font                        =
 #DOSBOX-X-ADV:pc-98 fontx dbcs                         = 
 #DOSBOX-X-ADV:pc-98 fontx internal symbol              = false
 #DOSBOX-X-ADV:pc-98 show graphics layer on initialize  = true
+#DOSBOX-X-ADV:pc-98 chargen vsync-limited access       = true
 
 [dosv]
 #             dosv: Enable DOS/V emulation and specify which version to emulate. This option is intended for use with games or software
@@ -1937,7 +1943,7 @@ goldplay                                         = true
 #DOSBOX-X-ADV:goldplay stereo                                  = true
 #DOSBOX-X-ADV:dsp require interrupt acknowledge                = auto
 #DOSBOX-X-ADV:dsp write busy delay                             = -1
-blaster environment variable                     = true
+blaster environment variable                     = false
 #DOSBOX-X-ADV:sample rate limits                               = true
 #DOSBOX-X-ADV:instant direct dac                               = false
 #DOSBOX-X-ADV:stereo control with sbpro only                   = true
@@ -2389,6 +2395,7 @@ timeout     = 0
 #DOSBOX-X-ADV:#      turn off a20 gate on load if loadfix needed: If enabled, and loading a program below the 64kb boundary, turn off the A20 gate.
 #DOSBOX-X-ADV:#                                                     This can help with any program with startup code that assumes the segment wraparound of the 8086.
 #DOSBOX-X-ADV:#                                                     Depending on DOS configuration the A20 gate may be re-enabled later such as calling INT 21h.
+#DOSBOX-X-ADV:#                                  xms log memmove: If set, XMS move/copy operations are logged for debugging purposes.
 #DOSBOX-X-ADV:#                xms memmove causes flat real mode: If set, any call to XMS to move/copy memory sets up flat real mode for segment registers DS and ES.
 #DOSBOX-X-ADV:#                   xms init causes flat real mode: If set, when the DOS kernel initializes XMS it will switch on flat real mode for segment registers DS and ES if appropriate.
 #DOSBOX-X-ADV:#      resized free memory block becomes allocated: If set, and the DOS application resizes a freed memory block, that block will be marked as allocated to that program.
@@ -2450,6 +2457,7 @@ timeout     = 0
 #                               network redirector: Report DOS network redirector as resident. This will allow the host name to be returned unless the secure mode is enabled.
 #                                                     You can also directly access UNC network paths in the form \\MACHINE\SHARE even if they are not mounted as drives on Windows systems.
 #                                                     Set either "ipx=true" in [ipx] section or "ne2000=true" in [ne2000] section for a full network redirector environment.
+#   mcb corruption becomes application free memory: If MCB chain corruption occurs following the DOS program PSP segment and the DOS program does anything to cause memory allocation,make a new free memory block in it's place instead of halting emulation with an MCB chain error. Some DOS programs are sloppywith memory to corrupt the MCB chain after itself in memory. This is apparently real MS-DOS behavior, set to true to enable.If set to false, all MCB chain corruption will halt emulation as DOSBox forks typically do already.
 #DOSBOX-X-ADV:#              minimum dos initial private segment: In non-mainline mapping mode, where DOS structures are allocated from base memory, this sets the
 #DOSBOX-X-ADV:#                                                     minimum segment value. Recommended value is 0x70. You may reduce the value down to 0x50 if freeing
 #DOSBOX-X-ADV:#                                                     up more memory is important. Set to 0 for default.
@@ -2627,10 +2635,11 @@ timeout     = 0
 #                                     dos idle api: If set, DOSBox-X can lower the host system's CPU load when a supported guest program is idle.
 #DOSBOX-X-ADV-SEE:#
 #DOSBOX-X-ADV-SEE:# Advanced options (see full configuration reference file [dosbox-x.reference.full.conf] for more details):
-#DOSBOX-X-ADV-SEE:# -> turn off a20 gate on load if loadfix needed; xms memmove causes flat real mode; xms init causes flat real mode; resized free memory block becomes allocated; badcommandhandler; mscdex device name; hma allow reservation; command shell flush keyboard buffer; special operation file prefix; drive z is remote; drive z convert fat; drive z expand path; drive z hide files; automount drive directories; hidenonrepresentable; hma minimum allocation; dos sda size; hma free space; cpm compatibility mode; minimum dos initial private segment; minimum mcb segment; enable dummy device mcb; maximum environment block size on exec; additional environment block size on exec; enable a20 on windows init; zero memory on xms memory allocation; vcpi; unmask timer on disk io; zero int 67h if no ems; zero unused int 68h; emm386 startup active; zero memory on ems memory allocation; ems system handle memory size; ems system handle on even megabyte; ems frame; umb start; umb end; kernel allocation in umb; keep umb on boot; keep private area on boot; private area in umb; private area write protect; autoa20fix; autoloadfix; startincon; int33 max x; int33 max y; int33 xy adjust; int33 mickey threshold; int33 hide host cursor if interrupt subroutine; int33 hide host cursor when polling; int33 disable cell granularity; int 13 disk change detect; int 13 extensions; biosps2; int15 wait force unmask irq; int15 mouse callback does not preserve registers; filenamechar; collating and uppercase; con device use int 16h to detect keyboard input; zero memory on int 21h memory allocation; pipe temporary device
+#DOSBOX-X-ADV-SEE:# -> turn off a20 gate on load if loadfix needed; xms log memmove; xms memmove causes flat real mode; xms init causes flat real mode; resized free memory block becomes allocated; badcommandhandler; mscdex device name; hma allow reservation; command shell flush keyboard buffer; special operation file prefix; drive z is remote; drive z convert fat; drive z expand path; drive z hide files; automount drive directories; hidenonrepresentable; hma minimum allocation; dos sda size; hma free space; cpm compatibility mode; minimum dos initial private segment; minimum mcb segment; enable dummy device mcb; maximum environment block size on exec; additional environment block size on exec; enable a20 on windows init; zero memory on xms memory allocation; vcpi; unmask timer on disk io; zero int 67h if no ems; zero unused int 68h; emm386 startup active; zero memory on ems memory allocation; ems system handle memory size; ems system handle on even megabyte; ems frame; umb start; umb end; kernel allocation in umb; keep umb on boot; keep private area on boot; private area in umb; private area write protect; autoa20fix; autoloadfix; startincon; int33 max x; int33 max y; int33 xy adjust; int33 mickey threshold; int33 hide host cursor if interrupt subroutine; int33 hide host cursor when polling; int33 disable cell granularity; int 13 disk change detect; int 13 extensions; biosps2; int15 wait force unmask irq; int15 mouse callback does not preserve registers; filenamechar; collating and uppercase; con device use int 16h to detect keyboard input; zero memory on int 21h memory allocation; pipe temporary device
 #DOSBOX-X-ADV-SEE:#
 xms                                              = true
 #DOSBOX-X-ADV:turn off a20 gate on load if loadfix needed      = false
+#DOSBOX-X-ADV:xms log memmove                                  = false
 #DOSBOX-X-ADV:xms memmove causes flat real mode                = true
 #DOSBOX-X-ADV:xms init causes flat real mode                   = false
 #DOSBOX-X-ADV:resized free memory block becomes allocated      = true
@@ -2659,6 +2668,7 @@ log console                                      = false
 share                                            = true
 file access tries                                = 0
 network redirector                               = true
+mcb corruption becomes application free memory   = false
 #DOSBOX-X-ADV:minimum dos initial private segment              = 0
 #DOSBOX-X-ADV:minimum mcb segment                              = 0
 minimum mcb free                                 = 0
